@@ -6,3 +6,5 @@ CHANGES
 
 * Use errors.HttpProcessingError.message as HTTP error reason and
   message #459
+
+* Optimize cythonized multidict a bit
